fix: 定时任务分布式锁 + 性能优化 + 代码质量修复
🔴 高优先级修复:
- 新增 DistributedLockService 分布式锁服务
- 14个定时任务添加分布式锁保护，防止集群重复执行
  - TaskReminderScheduler, PayrollAutoConfirmScheduler
  - ScheduledReportScheduler, ContractExpiryReminderScheduler
  - ScheduleReminderScheduler, HolidaySyncScheduler
  - AiBillingScheduler, SystemReportService
  - SessionAppService, DeadlineAppService

🟡 中优先级修复:
- DocumentAppService.reorderDocuments: 批量更新优化 (2N→2次DB操作)
- ExpenseAppService: 新增 batchConvertToCostAllocationDTO/SplitDTO
  避免 N+1 查询问题 (3N→3次DB操作)

📝 代码风格:
- 后端 spotless:apply 格式化
- 前端 ESLint/Prettier 修复

Co-authored-by: Cursor <cursoragent@cursor.com>